--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.6",
-    "nodemon": "^2.0.19"
+    "mongoose": "^6.5.1",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.19",
+    "sequelize": "^6.21.3",
+    "sqlite3": "^5.0.11"
   }
 }
