--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "csurf": "^1.11.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
+    "npm": "^8.16.0",
     "sequelize": "^6.21.3",
-    "sqlite3": "^5.0.11"
+    "sqlite3": "^5.0.11",
+    "uuid": "^8.3.2"
   }
 }
